# Ramsha-smart_Invoices

./: .gitignore  Dockerfile  UNIFIED_JSON_IMPLEMENTATION_SUMMARY.md  WORKFLOW_SEPARATION.md  package-lock.json
server/: .coverage  .env  .env.mcp  .gitignore  API_DOCUMENTATION.md  CONTRACT_SETUP.md  MCP_INTEGRATION.md  POSTMAN_TEST_GUIDE.md  README_INVOICE_SCHEDULER.md  SETUP_STEPS.md  TESTING_GUIDE.md  adk_main.py  clean_request.json  create_tables.py  curl_request.sh  main.py  oauth2_setup.py  pyproject.toml  refresh_gdrive_token.py  run_agent_evaluations.py  run_migration.py  setup_invoice_scheduler.py  setup_results.json  test_document_list.py  test_end_to_end_validation.py  test_json.json  test_mcp_fix.py  test_mcp_integration.py  test_unified_format.py  test_unified_workflow.py
server/adk_agents/: __init__.py  adk_integration_service.py  base_adk_agent.py  contract_processing_adk_agent.py  correction_adk_agent.py  invoice_generator_adk_agent.py  orchestrator_adk_workflow.py  schedule_retrieval_adk_agent.py  ui_generation_adk_agent.py  validation_adk_agent.py  validation_adk_agents.py
server/agents/: __init__.py  base_agent.py  contract_processing_agent.py  correction_agent.py  invoice_design_agent.py  invoice_generator_agent.py  invoice_scheduler_agent.py  orchestrator_agent.py  ui_invoice_generator_agent.py  validation_agent.py
server/controller/: __init__.py  auth_controller.py  document_controller.py  orchestrator_controller.py
server/db/: __init__.py  db.py  init_db.py  populate_db.py  postgresdb.py  sample_data.sql
server/deployment/: deploy_gmail_mcp.sh  gmail_mcp_cloudrun.yaml
server/details/: credentials.json
server/middleware/: __init__.py  auth.py
server/migrations/: add_corrected_invoice_data_fields.sql
server/models/: address.py  database_models.py  document.py  user.py
server/routes/: adk_orchestrator.py  auth.py  bots.py  emails.py  (+19 more)
(+264 files in other folders)
